# learningRust

GettingStarted/: README
GettingStarted/hello-rust/src/: main.rs
TheBook/hello/: 404.html  hello.html
TheBook/hello/src/: lib.rs  main.rs
TheBook/minigrep/: Cargo.toml
TheBook/minigrep/src/: lib.rs  main.rs
rustlings/: .gitignore  rust-project.json
rustlings/exercises/: quiz1.rs  quiz2.rs  quiz3.rs
rustlings/exercises/clippy/: clippy3.rs
rustlings/exercises/conversions/: as_ref_mut.rs  from_into.rs  from_str.rs  try_from_into.rs
rustlings/exercises/enums/: enums3.rs
rustlings/exercises/functions/: functions1.rs
rustlings/exercises/hashmaps/: hashmaps1.rs  hashmaps2.rs  hashmaps3.rs
rustlings/exercises/lifetimes/: lifetimes2.rs
rustlings/exercises/options/: options1.rs
rustlings/exercises/primitive_types/: primitive_types2.rs
rustlings/exercises/standard_library_types/: cow1.rs  iterators2.rs  iterators3.rs  iterators4.rs  iterators5.rs
rustlings/exercises/strings/: strings4.rs
rustlings/exercises/traits/: traits2.rs
rustlings/exercises/variables/: variables3.rs
rustlings/exercises/vecs/: vecs2.rs
