[package]
name = "minigrep"
version = "0.1.0"
edition = "2021"
authors = ["Rahul Pai"]
description = "Mini Grep written in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.1", features = ["derive", "env"] }
